<resources>
    <string name="app_name">SKIBin</string>
    <string name="welcom_message">Willkommen zu SKIBin von unsere-schulkindbetreuung.de bitte verbinden Sie sie App mit Ihrer Organisatin über das Menü Einstellungen</string>
    <string name="button_ScanCode">Checkin</string>
    <string name="button_optionen">Optionen</string>
    <string name="name_text">Name:</string>
    <string name="kurs_text">Kurs:</string>
    <string name="organisation_text">Organisation</string>
    <string name="settingsDeleted">Einstellungen gelöscht</string>
    <string name="settingsSaved">Einstellungen gespeichert</string>
    <string name="settingsFail">Fehler beim Speichern. Bitte neu Verbinden und die Webseite mit dem QR-Code neu laden</string>
    <string name="OkText">OK</string>
    <string name="settingsHelp">Scannen Sie den Verbindungs QR-COde in der Webanwendung</string>
    <string name="scanHelp">Scannen Sie den QR-Code des Schülerausweises oder die Ferienanmeldung</string>
    <string name="ansprechpartner">Ansprechpartner</string>
    <string name="telefon">Telefon</string>
    <string name="organisationName">Organisation</string>
    <string name="anwesendeKinder">Heute da: </string>
    <string name="torch">Lampe</string>
    <string name="torchOn">Beim Scannen des QR-Codes wird die LED-Lampe eingeschaltet</string>
    <string name="torchOff">Beim Scannen des QR-Codes ist die LED-Lampe ausgeschaltet</string>
    <string name="noSetting">Gerät verbinden</string>
    <string name="delete">Löschen</string>
    <string name="save">Speichern</string>
    <string name="noCheckin">Kein Kind vorhanden</string>
    <string name="chooseShool">Schule auswählen</string>
    <string name="hasBirthday"> Hat heute Geburtstag</string>
    <string name="checkinButton">Einchecken</string>
    <string name="noCallPermission">Für diese FUnktion benötigt die App die Telefonberechtigung</string>
    <string name="fingerprintAuthentivcate">Für den bestmöglichen Schutz der Kinderdaten müssen sie sich mit Ihrem Fingerabdruck oder PIN Authentifizieren</string>
    <string name="fingerprintAuthenticateButton">Authentifizieren</string>
    <string name="fingerprintAuthenticateSubtitle">Authentifizeren Sie sich um Zugriff auf die Kinderdaten zu erhalten</string>
    <string name="fingerprintAuthenticateTitle">Authentifizierung</string>
    <string name="fingerprintAuthenticateUsePin">PIN verwenden</string>
    <string name="pinWrong">PIN fehlerhaft </string>
    <string name="pinCorrect">PIN korrekt </string>
    <string name="pinSaved">PIN gespeichert </string>
    <string name="pinToShort">PIN zu kurz. Mindestend 4 Zeichen</string>
    <string name="accessGranted">Erfolgreich Authentifiziert</string>
    <string name="resetApp">SKIBin wurde zurückgesetzt</string>
    <string name="resetTitle">SkibIn Reset</string>
    <string name="resetSubtitle">Wollen Sie die App wirklich zurücksetzen?</string>
    <string name="checkinTitle">Wollen Sie das Kind wirklich einchecken?</string>
    <string name="callTitle">Jetzt anrufen?</string>

    <string name="emailCheckHint">Prüfen Sie Ihre E-Mails</string>
    <string name="errorTitle">Fehler</string>
    <string name="emailTokenError">Sie haben einen falschen Code eingegeben. Bitte prüfen Sie den Bestätigungscode in Ihrer E-Mail.</string>

    <string name="checkinMissingOrg">Die Organisation wurde nicht korrekt geladen. Bitte öffnen Sie die Organisationsansicht neu.</string>
    <string name="checkinSuccessFallback">Check-in erfolgreich verarbeitet.</string>
    <string name="checkinErrorFallback">Beim Check-in ist ein Fehler aufgetreten.</string>
    <string name="checkinServerNotFound">Das gescannte Kind konnte nicht gefunden oder nicht verarbeitet werden.</string>
    <string name="childListHeaderTitle">Kinderübersicht</string>
    <string name="childListHeaderSubtitle">Check-ins und Anwesenheiten im Blick</string>
    <string name="childListSegmentLabel">BETREUUNGSÜBERSICHT</string>
    <string name="childListSegmentTitle">Kinderlisten für das Team</string>
    <string name="childListSegmentDescription">Wechseln Sie zwischen spontanen Check-ins und den gemeldeten Anwesenheiten.</string>
    <string name="childListFilterLabel">Schulfilter</string>
    <string name="childListCheckinDescription">Kinder, die vor Ort eingecheckt werden können.</string>
    <string name="childListAfterListDescription">Kinder, die bereits über die Liste als anwesend gemeldet sind.</string>
    <string name="childListStatusCheckedIn">Eingecheckt</string>
    <string name="childListStatusOpen">Bereit</string>
    <string name="childListStatusSick">Krank</string>
    <string name="childListSickUntilLabel">bis</string>
</resources>
